# Secrets-Kit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
docs/: ARCHITECTURE_RUNTIME_SURFACE.md  BACKEND_STORE_CONTRACT.md  CLI_ARCHITECTURE.md  CLI_REFERENCE.md  CLI_STYLE_GUIDE.md  CONCEPTS.md  CROSS_HOST_CHECKLIST.md  CROSS_HOST_VALIDATION.md  DEFAULTS.md  DISTRIBUTED_VALIDATION_STATUS.md  DOCSTRING_CONTRACT.md  EXAMPLES.md  GITHUB_RELEASE_BUILD.md  ICLOUD_SYNC_VALIDATION.md  IMPORT_LAYER_RULES.md  INTEGRATIONS.md  INTEGRATION_OPENCLAW.md  IPC_SEMANTICS_ADR.md  LAUNCHD_VALIDATION.md  METADATA_REGISTRY.md  METADATA_SEMANTICS_ADR.md  OPERATIONS_STATUS.md  OPERATOR_LIFECYCLE.md  PACKAGE_VERSION.md  PEER_BOOTSTRAP.md  PEER_SYNC.md  PROTOCOL_TRANSPORT_ARCHITECTURE.md  QUICKSTART.md  README.md  RELAY_SEPARATION_STATUS.md  RUNTIME_AUTHORITY_ADR.md  RUNTIME_NAMESPACE_ARCHITECTURE.md  RUNTIME_SESSION_ADR.md  RUNTIME_TRUTH_MATRIX.md  SECKIT_RUN_AND_BACKEND_REWORK_PLAN.md  SECURITY_MODEL.md  SYNC_HOST_PROVISIONING.md  Secrets-Kit-Glossary-of-Terms.md  TODO.md  USAGE.md  (+1 more)
fixtures/: fake.env  synthetic-sample.env
scripts/: bootstrap_peer.sh  bootstrap_vm_smoke.sh  build_bundled_helper_for_wheel.sh  check_import_cycles.py  install.sh  keychain_dev_seed.sh  notarize_bundled_helper.sh  package_release_wheels.sh  peer_sync_remote_smoke.sh  precommit_secret_gate.py  reconcile_two_db_compare.sh  release_preflight.sh  replay_import_sequence.py  reset_peer.sh  run_local_validation.sh  seckit_cross_host_prepare.sh  seckit_cross_host_transport_localhost.sh  seckit_cross_host_verify.sh  seckit_launchd_agent_simulator.py  seckit_launchd_smoke.sh  sqlite_dev_seed.sh
test-scripts/: Makefile  README.md  run_all_tests.sh  run_integration_tests.sh  run_keychain_integration.sh  run_unit_tests.sh  runtime_report.sh  seckit_launchd_smoke.sh  smoke_full_local_runtime.sh  smoke_run.sh  smoke_sqlite.sh  smoke_sqlite_restart.sh
tests/: README.md  __init__.py  leakage_needles.py  macos_integration.py  platform_guards.py  test_backend_resolution.py  test_backend_store_contract.py  test_cli_commands.py  test_cli_help_consistency.py  test_cli_strings_en.py  test_disposable_keychain_flow.py  test_export_shell.py  test_identity.py  test_import_dotenv.py  test_import_layer_guards.py  test_keychain_backend_real.py  test_keychain_backend_store.py  test_keychain_inventory.py  test_launchd_run_flow.py  test_leakage_invariants.py  test_models_kind.py  test_native_helper.py  (+30 more)
(+196 files in other folders)
