[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seckit"
version = "1.2.0"
description = "Local CLI for secrets and PII: macOS Keychain (secure) or portable encrypted SQLite (sqlite); registry + export/import"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "unixwzrd", email = "unixwzrd@unixwzrd.ai" }]
dependencies = [
  "cryptography>=42.0.0",
  "PyNaCl>=1.5.0",
  "PyYAML>=6.0",
]

[project.scripts]
secrets-kit = "secrets_kit.cli:main"
seckit = "secrets_kit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
secrets_kit = [
  "native_helper_bundled/README.md",
]

[tool.setuptools.packages.find]
where = ["src"]
