[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seckit"
version = "1.2.5"
description = "Local CLI for secrets and PII: macOS Keychain (secure) or portable encrypted SQLite (sqlite); registry + export/import"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "unixwzrd", email = "unixwzrd@unixwzrd.ai" }]
dependencies = [
  "cryptography>=42.0.0",
  "PyNaCl>=1.5.0",
  "pydantic==2.13.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-xdist>=3.0",
]

[project.scripts]
secrets-kit = "secrets_kit.cli.main:main"
seckit = "secrets_kit.cli.main:main"
seckitd = "secrets_kit.seckitd.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
